[metadata]
name=Dependency Cleaner
version=0.1.0
description=Remove node_modules and venv
author=Kamuri Amorim
author_email=myk.gata14@gmail.com
long_description= file: README.md
long_description_content_type=text/markdown
url=
keywords=python
license=MIT
[options]
zip_safe = False
packages =
    depclean
[options.entry_points]
console_scripts =
    depclean = depclean.main:main
